more informative alt text

--- a/layouts/partials/page_gallery.html
+++ b/layouts/partials/page_gallery.html
@@ -43,15 +43,32 @@
             height="{{ $thumbnail.Height }}"
             class="lazyload"
             data-src="{{ $thumbnail.RelPermalink }}"
-            {{ with $metadata }}
-              {{ if .ImageDescription }}
-                alt="{{ .ImageDescription }}"
-              {{ else }}
-                {{ if .Title }}
-                  alt="{{ .Title }}"
-                {{ end }}
+            alt="{{ with $metadata }}
+              {{ if .Title }}
+                Title: {{ .Title }}
               {{ end }}
-            {{ end }}
+              {{ if .ImageDescription }}
+                {{ .ImageDescription }}
+              {{ end }}
+              [{{ if .Model }}
+                {{ .Model }},
+              {{ end }}
+              {{ if .LensModel }}
+                {{ .LensModel }},
+              {{ end }}
+              {{ if .FocalLength }}
+                {{ .FocalLength }} mm,
+              {{ end }}
+              {{ if .ExposureTime }}
+                {{ .ExposureTime }},
+              {{ end }}
+              {{ if .FNumber }}
+                f/{{ .FNumber }},
+              {{ end }}
+              {{ if .ISOSpeedRatings }}
+                ISO{{ .ISOSpeedRatings }}
+              {{ end }}]
+            {{ end }}"
           />
           <meta itemprop="contentUrl" content="{{ $original.RelPermalink }}" />
           {{ with $.Site.Author }}
